welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:1: error: ';' expected but ',' found.
override def run() {faireMotif();avance();avance();avance();avance();faireMotif();recule();recule();recule();recule();reposition();faireMotif(),avance;avance();avance();avance();faireMotif()}
                                                                                                                                               ^