welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {faireMotif();avance();avance();avance();avance();faireMotif();recule();recule();recule();recule();reposition();faireMotif(),avance;avance();avance();avance();faireMotif()}

def marquerSol(){baisseBrosse();leveBrosse()}

def faireDiago(c:Color){setCouleurBrosse(c);marquerSol();avance();gauche();avance();marquerSol();gauche();avance()}

def faireMotif(){avance();gauche();faireDiago(Color.RED);gauche();avance();avance();faireDiago(Color.BLUE);gauche();avance();gauche();recule();recule();gauche();avance();avance();droite();faireDiago(Color.YELLOW);gauche();avance();gauche();avance();avance();avance();gauche();faireDiago(Color.GREEN);gauche();recule();recule();gauche();recule();recule();droite()}

def reposition(){recule();recule();recule();recule();gauche();avance();avance();avance();avance();droite()}


